<resources>
    <string name="app_name">Your Age in Minutes</string>
    <string name="textview">TextView</string>
    <string name="calculate_your_age">CALCULATE YOUR AGE</string>
    <string name="minuteText">IN MINUTES &#x1F60E; &#x1F680;</string>
    <string name="select_date">SELECT DATE</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age in Minutes &#x1F633;</string>
    <string name="footer">Developed by Abhi &#x1F4F2;</string>
</resources>