<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/textBg"
        android:padding="10dp"
        android:text="@string/calculate_your_age"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/minuteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/minuteText"
        android:textColor="@color/minuteColor"
        android:textSize="16sp"
        android:background="@color/minuteBg"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/buttonBg"/>

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/minuteColor"
        android:textStyle="bold"
        android:layout_marginTop="25sp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/minuteColor"
        android:text="@string/selected_date"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvSelectedDateInMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/minuteColor"
        android:layout_marginTop="25sp"
        android:textStyle="bold"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/minuteColor"
        android:text="@string/age_in_minutes"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer"
        android:layout_marginTop="280sp"
        android:textSize="15sp"/>

</LinearLayout>
